--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 Vive tu vida
               </div>
             </div>
-            <h1 class="h1 mb-6">Nos preocupamos por tu salud</h1>
+            <h1 class="h1 mb-6">Nos preoocupamos por tu salud</h1>
             <p class="mb-[42px] md:max-w-xl">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
               alias excepturi laboriosam delectus culpa error dolorum dolores,
