--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    
   </head>
   <body>
     <header class="py-8 xl:pt-6 lg:pb-14">
@@ -206,7 +205,7 @@
               alias excepturi laboriosam delectus culpa error dolorum dolores,
               aliquid autem odit labore.
             </p>
-            <button class="btn btn-lg btn-accent mx-auto lg:mx-0">
+            <button class="btn btn-lg btn-accent mx-auto lg:mb-4 lg:mx-0">
               Contactanos
             </button>
           </div>
@@ -216,8 +215,128 @@
         </div>
       </div>
     </section>
+    <section class="stats section">
+      <div class="container mx-auto">
+        <div class="flex flex-col lg:flex-row gap-y-6 justify-between">
+          <div
+            class="stats__item flex-1 lg:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl lg:text-[64px] font-semibold text-accent-tertiary lg:mb-2"
+            >
+              +5120
+            </div>
+            <div>Pacientes satisfechos</div>
+          </div>
+          <div
+            class="stats__item flex-1 lg:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl lg:text-[64px] font-semibold text-accent-tertiary lg:mb-2"
+            >
+              26
+            </div>
+            <div>Centros propios</div>
+          </div>
+          <div
+            class="stats__item flex-1 lg:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl lg:text-[64px] font-semibold text-accent-tertiary lg:mb-2"
+            >
+              +55
+            </div>
+            <div>Profesionales</div>
+          </div>
+          <div class="stats__item flex-1 flex flex-col items-center">
+            <div
+              class="text-4xl lg:text-[64px] font-semibold text-accent-tertiary lg:mb-2"
+            >
+              +10
+            </div>
+            <div>Años de experiencia</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="services">
+      <div
+        class="bg-services bg-cover bg-no-repeat max-w-[1466px] mx-4 lg:mx-auto rounded-[20px] lg:pt-[70px] px-6 lg:px-0 relative h-[368px] flex items-center lg:items-start -z-10"
+      >
+        <div class="container mx-auto">
+          <div
+            class="services__top flex items-center flex-col lg:flex-row lg:mb-[60px]"
+          >
+            <h2
+              class="h2 text-white flex-1 mb-4 lg:mb-0 text-center lg:text-left"
+            >
+              Nuestros mejores servicios para su solución
+            </h2>
+            <p
+              class="text-white flex-1 text-center lg:text-left max-w-2xl lg:max-w-none"
+            >
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis
+              beatae minus architecto impedit id neque doloribus possimus
+              voluptas sapiente delectus.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container mx-auto mt-8 lg:-mt-[144px]">
+        <div class="grid lg:grid-cols-4 gap-5 px-8 lg:px-0">
+          <div
+            class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center"
+          >
+            <div class="mb-[15px]">
+              <img src="./assets/icons/services/icon-1.svg" alt="" />
+            </div>
+            <h3 class="h3 mb-[10px]">Médicos generalistas</h3>
+            <p class="font-light leading-normal max-w-[300px]">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+              minima.
+            </p>
+          </div>
+          <div
+            class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center"
+          >
+            <div class="mb-[15px]">
+              <img src="./assets/icons/services/icon-2.svg" alt="" />
+            </div>
+            <h3 class="h3 mb-[10px]">Asistencia en tu embarazo</h3>
+            <p class="font-light leading-normal max-w-[300px]">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+              minima.
+            </p>
+          </div>
+          <div
+            class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center"
+          >
+            <div class="mb-[15px]">
+              <img src="./assets/icons/services/icon-3.svg" alt="" />
+            </div>
+            <h3 class="h3 mb-[10px]">Soporte nutricional</h3>
+            <p class="font-light leading-normal max-w-[300px]">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+              minima.
+            </p>
+          </div>
+          <div
+            class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center"
+          >
+            <div class="mb-[15px]">
+              <img src="./assets/icons/services/icon-4.svg" alt="" />
+            </div>
+            <h3 class="h3 mb-[10px]">Farmacia para todos</h3>
+            <p class="font-light leading-normal max-w-[300px]">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+              minima.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <div class="h-[4000px]"></divcl>
+    <div class="h-[4000px]"></div>
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/scrollreveal.min.js"></script>
